# docs/swagger.json
@@ -58,6 +58,52 @@
                 }
             }
         },
+        "/auth/logout": {
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "for logout",
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Delete user token",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.LogoutSwaggerResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorSwaggerResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorSwaggerResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorSwaggerResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorSwaggerResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/password": {
             "patch": {
                 "security": [
@@ -888,7 +934,6 @@
                     "type": "string"
                 },
                 "type": {
-                    "description": "income / expense",
                     "type": "string"
                 }
             }
@@ -935,6 +980,17 @@
                     "$ref": "#/definitions/dto.LoginResponse"
                 },
                 "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "dto.LogoutSwaggerResponse": {
+            "type": "object",
+            "properties": {
+                "logout success": {
                     "type": "string"
                 },
                 "success": {
